--- a/app/views/slurrystorage-2024/current/eligibility/common/planned-size-storage-fail.html
+++ b/app/views/slurrystorage-2024/current/eligibility/common/planned-size-storage-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="existing-size-storage">Back</a>
+  <a class="govuk-back-link"  href="javascript:history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -25,13 +25,12 @@
       <h1 class="govuk-heading-l">
         You cannot apply for a grant from this scheme
       </h1>
-  {% if (data['farmertype'] == "Pig") %}
+      {% if (data['farmertype'] == "Pig") %}
       <p class="govuk-body">This grant is to get your storage levels to 8 months.</p>
       {% else %}
       <p class="govuk-body">This grant is to get your storage levels to 6 months.</p>
-  {% endif %}
-
-<br>
+      {% endif %}
+      <br>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
       </div>
 
