--- a/app/views/slurrystorage-2024/current/eligibility/common/project-start.html
+++ b/app/views/slurrystorage-2024/current/eligibility/common/project-start.html
@@ -24,13 +24,13 @@ Have you already started work on the project?
     <h1 class="govuk-heading-l">Have you already started work on the project?</h1>
 
 
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" method="post">
 
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset" aria-describedby="sign-in-project-start">
                 <div class="govuk-radios">
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="project-start-1" name="project-start" type="radio" value="preparatory work" aria-describedby="project-start-1-item-hint" {{ checked("project-start", "preparatory work") }}>
+                    <input class="govuk-radios__input" id="project-start-1" name="project-start" type="radio" value="preparatory work" aria-describedby="project-start-1-item-hint" {{ checked("project-start", "preparatory work") }} data-next='tenancy'>
                     <label class="govuk-label govuk-radios__label" for="project-start-1">
                       Yes, preparatory work
                     </label>
@@ -39,7 +39,7 @@ Have you already started work on the project?
                     </div>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="project work" aria-describedby="project-start-2-item-hint" {{ checked("project-start", "project work") }}>
+                    <input class="govuk-radios__input" id="project-start-2" name="project-start" type="radio" value="project work" aria-describedby="project-start-2-item-hint" {{ checked("project-start", "project work") }} data-next='project-start-fail'>
                     <label class="govuk-label govuk-radios__label" for="project-start-2">
                     Yes, we have begun project work
                     </label>
@@ -48,7 +48,7 @@ Have you already started work on the project?
                     </div>
                   </div>
                   <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="project-start-3" name="project-start" type="radio" value="No" aria-describedby="project-start-3-item-hint" {{ checked("project-start", "No") }}>
+                    <input class="govuk-radios__input" id="project-start-3" name="project-start" type="radio" value="No" aria-describedby="project-start-3-item-hint" {{ checked("project-start", "No") }} data-next='tenancy'>
                     <label class="govuk-label govuk-radios__label" for="project-start-3">
                       No, we have not done any work on this project yet
                     </label>
