--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/cover-size2.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/cover-size2.html
@@ -20,7 +20,7 @@ Cover size
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" method="post">
 
 
 
