--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/cover-type.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/cover-type.html
@@ -28,7 +28,7 @@ What type of cover will you have?
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
 
-            <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+            <form id="mainForm" class="form" method="post">
 
 
 
