--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/existing-fit-for-purpose-fail.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/existing-fit-for-purpose-fail.html
@@ -14,7 +14,7 @@
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="existing-fit-for-purpose">Back</a>
+  <a class="govuk-back-link" href="javascript:history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
