--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/gantry.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/gantry.html
@@ -14,13 +14,13 @@ Gantry
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
 
-  <a class="govuk-back-link" href="separator">Back</a>
+  <a class="govuk-back-link" href="javascript:history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="solid-fraction-storage" method="post">
+      <form id="mainForm" class="form" method="post">
 
         {{ govukRadios({
             classes: "govuk-radios--inline",
