--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/item-sizes-quantities.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/item-sizes-quantities.html
@@ -15,13 +15,13 @@ Item sizes and quantities
     },
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
-<a class="govuk-back-link" href="project-items">Back</a>
+<a class="govuk-back-link" href="javascript:history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" method="post">
         <h2 class="govuk-heading-l">Item sizes and quantities</h2>
         <div id="item-sizes" class="govuk-body">
           Enter the approximate size and quantities your project needs
