--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/project-summary.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/project-summary.html
@@ -15,7 +15,7 @@ Project summary
     },
       html: 'This is not a full service. It is not production code and you might experience problems.'
   }) }}
-<a class="govuk-back-link" href="item-sizes-quantities">Back</a>
+<a class="govuk-back-link" href="javascript:history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
