--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/separator.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/separator.html
@@ -13,14 +13,14 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-  <a class="govuk-back-link" href="cover-size">Back</a>
+  <a class="govuk-back-link" href="javascript:history.back()">Back</a>
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" method="post">
 
               {{ govukRadios({
                   classes: "govuk-radios--inline",
