--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/storage-capacity-increase-pig.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/storage-capacity-increase-pig.html
@@ -20,7 +20,7 @@ Current storage capacity for Pig farmers
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" method="post">
 
   {# include logic for choices: PIG FARMER + 'Build a new store' and then 'Replace an existing store' #}
   {% if (data['projecttype'] == "Replace") %}
