--- a/app/views/slurrystorage-2024/current/eligibility/infrastructure/store-type.html
+++ b/app/views/slurrystorage-2024/current/eligibility/infrastructure/store-type.html
@@ -20,7 +20,7 @@ What type of cover will you have?
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form id="mainForm" class="form" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="storetype-hint">
