Updates to adding value

--- a/app/views/adding-value-2024/v1/eligibility/adding-value/smaller-abattoir.html
+++ b/app/views/adding-value-2024/v1/eligibility/adding-value/smaller-abattoir.html
@@ -57,7 +57,7 @@
                             value: 'No',
                             checked: true if data['smaller-abattoir'] == 'No',
                             attributes: {
-                                'data-next': 'produce'
+                                'data-next': 'items-needed'
                             }
                         }
                     ]
