--- a/app/views/adding-value-2024/v1/eligibility/common/tenancy.html
+++ b/app/views/adding-value-2024/v1/eligibility/common/tenancy.html
@@ -1,7 +1,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-    Will this abattoir provide services to other farmers?
+    Is the planned project on land the business owns?
 {% endblock %}
 
 {% block content %}
@@ -13,35 +13,35 @@
             <form method="post">
 
                 {{ govukRadios ({
-                    idPrefix: 'smaller-abattoir-other',
-                    name: 'smaller-abattoir-other',
+                    idPrefix: 'tenancy',
+                    name: 'tenancy',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will this abattoir provide services to other farmers?',
+                            text: 'Is the planned project on land the business owns?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     hint: {
-                        text: 'For example, farmers pay you to slaughter their livestock'
+                        text: 'The site where the work will happen'
                     },
                     items: [
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['smaller-abattoir-other'] == 'Yes',
+                            checked: true if data['tenancy'] == 'Yes',
                             attributes: {
-                                'data-next': 'produce'
-                            }
+                                    'data-next': '../adding-value/smaller-abattoir'
+                                }
                         },
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['smaller-abattoir-other'] == 'No',
+                            checked: true if data['tenancy'] == 'No',
                             attributes: {
-                                'data-next': 'elim-smaller-abattoir-other'
-                            }
+                                    'data-next': 'project-responsibility'
+                                }
                         }
                     ]
                 }) }}
@@ -54,6 +54,7 @@
 
         </div>
 
+
         <div class="govuk-grid-column-one-third">
 
             <div class="app-step-nav-related app-step-nav-related--singular">
@@ -61,7 +62,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    You must provide some abattoir services to other farmers.
+                    If you are a tenant farmer, you have the option to ask your landlord to underwrite your agreement.
                 </p>
             </div>
 
@@ -70,3 +71,4 @@
 </div>
 
 {% endblock %}
+
