--- a/app/views/adding-value-2024/current/eligibility/adding-value/top-fruit-storage.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/top-fruit-storage.html
@@ -1,7 +1,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-    Do you want to build a new smaller abattoir?
+    Do you want to build new controlled atmosphere storage for top fruit?
 {% endblock %}
 
 {% block content %}
@@ -12,52 +12,35 @@
 
             <form method="post">
 
-                {% set hintHtml %}
-
-                    <p class="govuk-hint">
-                        A smaller abattoir is a:
-                    </p>
-
-                    <ul class="govuk-list govuk-list--bullet govuk-hint">
-                        <li>
-                            red meat abattoir that processes up to 10,000 livestock units each year
-                        </li>
-                        <li>
-                            poultry abattoir that slaughters up to 500,000 birds each year
-                        </li>
-                    </ul>
-
-                {% endset %}
-
                 {{ govukRadios ({
-                    idPrefix: 'smaller-abattoir',
-                    name: 'smaller-abattoir',
+                    idPrefix: 'top-fruit-storage',
+                    name: 'top-fruit-storage',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Do you want to build a new smaller abattoir?',
+                            text: 'Do you want to build new controlled atmosphere storage for top fruit?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     hint: {
-                        html: hintHtml
+                        text: 'Fruit that grows on trees, for example apples, pears, plums, cherries'
                     },
                     items: [
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['smaller-abattoir'] == 'Yes',
+                            checked: true if data['top-fruit-storage'] == 'Yes',
                             attributes: {
-                                'data-next': 'smaller-abattoir-other'
+                                'data-next': '../funding/solar-pv'
                             }
                         },
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['smaller-abattoir'] == 'No',
+                            checked: true if data['top-fruit-storage'] == 'No',
                             attributes: {
-                                'data-next': 'produce'
+                                'data-next': 'items-needed'
                             }
                         }
                     ]
