--- a/app/views/adding-value-2024/v1/eligibility/adding-value/smaller-abattoir-other.html
+++ b/app/views/adding-value-2024/v1/eligibility/adding-value/smaller-abattoir-other.html
@@ -1,7 +1,7 @@
 {% extends 'adding-value-2024/layout.html' %}
 
 {% block pageTitle %}
-    Do you want to build a new smaller abattoir?
+    Will this abattoir provide services to other farmers?
 {% endblock %}
 
 {% block content %}
@@ -10,54 +10,37 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form method="post">
-
-                {% set hintHtml %}
-
-                    <p class="govuk-hint">
-                        A smaller abattoir is a:
-                    </p>
-
-                    <ul class="govuk-list govuk-list--bullet govuk-hint">
-                        <li>
-                            red meat abattoir that processes up to 10,000 livestock units each year
-                        </li>
-                        <li>
-                            poultry abattoir that slaughters up to 500,000 birds each year
-                        </li>
-                    </ul>
-
-                {% endset %}
+            <form method="post" action="items-needed">
 
                 {{ govukRadios ({
-                    idPrefix: 'smaller-abattoir',
-                    name: 'smaller-abattoir',
+                    idPrefix: 'smaller-abattoir-other',
+                    name: 'smaller-abattoir-other',
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Do you want to build a new smaller abattoir?',
+                            text: 'Will this abattoir provide services to other farmers?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     hint: {
-                        html: hintHtml
+                        text: 'For example, farmers pay you to slaughter their livestock'
                     },
                     items: [
                         {
                             text: 'Yes',
                             value: 'Yes',
-                            checked: true if data['smaller-abattoir'] == 'Yes',
+                            checked: true if data['smaller-abattoir-other'] == 'Yes',
                             attributes: {
-                                'data-next': 'smaller-abattoir-other'
+                                'data-next': 'items-needed'
                             }
                         },
                         {
                             text: 'No',
                             value: 'No',
-                            checked: true if data['smaller-abattoir'] == 'No',
+                            checked: true if data['smaller-abattoir-other'] == 'No',
                             attributes: {
-                                'data-next': 'produce'
+                                'data-next': 'elim-smaller-abattoir-other'
                             }
                         }
                     ]
@@ -68,6 +51,19 @@
                 }) }}
 
             </form>
+
+        </div>
+
+        <div class="govuk-grid-column-one-third">
+
+            <div class="app-step-nav-related app-step-nav-related--singular">
+                <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                </h2>
+                <p>
+                    You must provide some abattoir services to other farmers.
+                </p>
+            </div>
 
         </div>
 
