--- a/app/views/adding-value-2024/current/eligibility/adding-value/top-fruit-storage.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/top-fruit-storage.html
@@ -24,7 +24,7 @@
                         }
                     },
                     hint: {
-                        text: 'Fruit that grows on trees, for example apples, pears, plums, cherries'
+                        text: 'Fruit that grows on trees, for example apples, pears, quinces, medlars, plums, peaches, apricots and cherries'
                     },
                     items: [
                         {
