--- a/app/views/adding-value-2024/current/eligibility/funding/remaining-cost.html
+++ b/app/views/adding-value-2024/current/eligibility/funding/remaining-cost.html
@@ -17,8 +17,8 @@
 
             <form method="post">
 
-                {% set nextPage = '../../scoring/value' %}
-                {% if data['scoring-produce'] == 'Horticultural produce' and data['top-fruit-storage'] == 'Yes' %}
+                {% set nextPage = '../../scoring/produce' %}
+                {% if data['top-fruit-storage'] == 'Yes' %}
                     {% set nextPage = '../../scoring/mechanisation' %}
                 {% endif %}
 
