--- a/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
+++ b/app/views/adding-value-2024/current/eligibility/adding-value/smaller-abattoir-other.html
@@ -32,7 +32,7 @@
                             value: 'Yes',
                             checked: true if data['smaller-abattoir-other'] == 'Yes',
                             attributes: {
-                                'data-next': 'produce'
+                                'data-next': 'items-needed'
                             }
                         },
                         {
