--- a/app/views/adding-value-2024/current/scoring/results.html
+++ b/app/views/adding-value-2024/current/scoring/results.html
@@ -124,7 +124,31 @@
 
                 <tbody class="govuk-table__body">
 
-                    {% if data['scoring-produce'] != 'Horticultural produce' and data['top-fruit-storage'] != 'Yes' %}
+                    {% if data['top-fruit-storage'] != 'Yes' %}
+
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell">
+                                <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">
+                                    Produce processed
+                                </p>
+                                <ul class="govuk-list govuk-list--bullet">
+                                    <li>
+                                        {{ data['scoring-produce'] }}
+                                    </li>
+                                </ul>
+                            </th>
+                            <td class="govuk-table__cell">
+                                Average
+                            </td>
+                            <td class="govuk-table__cell">
+                                Create and expand processing capacity to provide more English-grown food for consumers to buy
+                            </td>
+                            <td class="govuk-table__cell">
+                                <a class="govuk-link govuk-link--no-visited-state" href="produce?from-scoring=true">
+                                    Change
+                                </a>
+                            </td>
+                        </tr>
 
                         <tr class="govuk-table__row">
                             <td class="govuk-table__cell">
@@ -171,7 +195,7 @@
                                 </a>
                             </td>
                         </tr>
-                        
+
                     {% endif %}
 
                     <tr class="govuk-table__row">
