--- a/app/views/adding-value-2024/current/details/confirmation.html
+++ b/app/views/adding-value-2024/current/details/confirmation.html
@@ -28,6 +28,12 @@
         If you do not get an email within 72 hours, call the RPA helpline and follow the options for the Farming Transformation Fund scheme.
       </p>
 
+      {% if data['top-fruit-storage'] == 'Yes' %}
+        <p>
+          In addition to the controlled atmosphere storage for top fruit project, you can <a href="#">check if you can apply for another Adding Value project</a>.
+        </p>
+      {% endif %}
+
       <h2 class="govuk-heading-m">RPA helpline</h2>
 
       <h3 class="govuk-heading-s">Telephone</h3>
