updates to AV content

--- a/app/views/adding-value-2024/current/details/confirmation.html
+++ b/app/views/adding-value-2024/current/details/confirmation.html
@@ -30,7 +30,7 @@
 
       {% if data['top-fruit-storage'] == 'Yes' %}
         <p>
-          In addition to the controlled atmosphere storage for top fruit project, you can <a href="#">check if you can apply for another Adding Value project</a>.
+          You can <a href="#">check if you can apply for another Adding Value project</a> in addition to top fruit storage.
         </p>
       {% endif %}
 
