index update for core screens proto

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -31,6 +31,14 @@
   </thead>
   <tbody class="govuk-table__body">
 
+      <tr class="govuk-table__row">
+    <td class="govuk-table__cell"><a href="new" class="govuk-lik govuk-link--no-visited-state">Adult cattle housing - core screens</a>
+      </td>
+
+    <td class="govuk-table__cell">Checker (Last updated on 8 July 2024)</td>
+
+  </tr>
+
   <tr class="govuk-table__row">
     <td class="govuk-table__cell"><a href="slurrystorage-2024" class="govuk-lik govuk-link--no-visited-state">Slurry Infrastructure Grant (2024)</a>
       </td>
