--- a/app/views/new/index.html
+++ b/app/views/new/index.html
@@ -48,9 +48,9 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <span class="govuk-caption-xl">New proto grant</span>
+      <span class="govuk-caption-xl">Adult cattle housing core screens</span>
       <h1 class="govuk-heading-xl">
-       New prototype admin
+       Adult cattle housing core screens admin
       </h1>
 
       <div class="proto-admin">
