--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,7 +35,7 @@
     <td class="govuk-table__cell"><a href="new" class="govuk-lik govuk-link--no-visited-state">Adult cattle housing - core screens</a>
       </td>
 
-    <td class="govuk-table__cell">Checker (Last updated on 8 July 2024)</td>
+    <td class="govuk-table__cell">Test checker (Last updated on 8 July 2024)</td>
 
   </tr>
 
